--- a/portfolio.html
+++ b/portfolio.html
@@ -6,4 +6,19 @@
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   </head>
+  <body>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Anthony Leung</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li><a href="/index.html">Home/About</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+          <li class="active"><a href="/portfolio.html">Portfolio</a></li>
+        </ul>
+        
+      </div>
+    </nav>
+  </body>
 </html>
