--- a/index.html
+++ b/index.html
@@ -30,23 +30,21 @@
     <div  class="container">
       <h2>About Me</h2>
       <hr>
-      <div class="column">
+      <div class="row">
         <div class="col-lg-6 col-sm-12 ">
           <img  id="bio-img" src="/assets/images/headshot.jpg" />
         </div>
+        <div class="row">
         <div class="col-lg-6 col-sm-12 ">
           <p>Anthony Leung has spent over 13 years auditing the financial services industry in both internal and external audit capacities. Most recently, Anthony serves as an Internal Auditor at TPICAP. During Anthony's time at his former employer Deutsche Bank, Anthony co-chaired db-Enable, an Employee Resource Group with a focus on mental health, well-being and disability awareness and was heavily involved in other diversity inclusiveness initiatives. Anthony was also nominated as an iMentor Ambassador based on his exemplary level of commitment to the program and his role as a mentor. Anthony also spent 8 years in the US Marine Corps and served in Iraq in support of Operation Iraqi Freedom. 
             <br>
-
+            <div class="row">
         <div class="col-lg-6 col-sm-12 ">
           <img  id="bio-img" src="/assets/images/7WW.jpg" />
         </div>
       </div>
-      <br>
-      <br>
-      <div class="column">
-        
-            <br>
+      <div class="row">
+        <div class="col-lg-6 col-sm-12 ">
             Anthony enjoys traveling and fitness related activities during his spare time. Anthony has seen all New Seven Wonders of the World, to include the Great Pyramids of Giza in Egypt. Anthony is also a Finisher of the TCS NYC Marathon in 2017.</p>
         </div>
       </div>
