--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,10 @@
           <li><a href="/contact.html">Contact</a></li>
           <li class="active"><a href="/portfolio.html">Portfolio</a></li>
         </ul>
-        
-      </div>
+                </div>
+              </div>
     </nav>
-  </body>
+    <div class="alert alert-primary" role="alert">
+      Please refer to the following for my portfolio <a href="https://github.com/ALeung1022?tab=repositories" class="alert-link">Anthonys Github</a>.
+    </body>
 </html>
